<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_workout"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/register_run" />
    
    <item
        android:id="@+id/nav_bag"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/my_bag" />
    
    <item
        android:id="@+id/nav_pokemon"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/my_pokemon" />
    
    <item
        android:id="@+id/nav_pokedex"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/pokedex" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>






