<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_workout">

    <fragment
        android:id="@+id/nav_workout"
        android:name="com.example.pokerun.ui.fragment.WorkoutFragment"
        android:label="@string/register_run"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/nav_bag"
        android:name="com.example.pokerun.ui.fragment.BagFragment"
        android:label="@string/my_bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/nav_pokemon"
        android:name="com.example.pokerun.ui.fragment.PokemonFragment"
        android:label="@string/my_pokemon"
        tools:layout="@layout/fragment_pokemon" />

    <fragment
        android:id="@+id/nav_pokedex"
        android:name="com.example.pokerun.ui.fragment.PokedexFragment"
        android:label="@string/pokedex"
        tools:layout="@layout/fragment_pokedex" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pokerun.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>






